--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-    "name": "gl-data-collector-server-statistics",
-    "version": "1.0.0",
-    "description": "statistics",
-    "scripts": {
-        "start": "node lib/app.js",
-        "build": "babel src --out-dir lib"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/case2912/gl-data-collector-server-statistics.git"
-    },
-    "author": "case2912",
-    "license": "ISC",
-    "dependencies": {
-        "aws-sdk": "^2.4.11",
-        "babel-cli": "^6.11.4",
-        "babel-polyfill": "^6.9.1",
-        "babel-preset-es2015": "^6.9.0",
-        "babel-preset-stage-3": "^6.11.0",
-        "koa": "^2.0.0-alpha.4",
-        "koa-bodyparser": "^3.1.0",
-        "koa-router": "^7.0.1"
-    }
+  "name": "gl-data-collector-server-statistics",
+  "version": "1.0.0",
+  "description": "statistics",
+  "scripts": {
+    "start": "node lib/app.js",
+    "build": "babel src --out-dir lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/case2912/gl-data-collector-server-statistics.git"
+  },
+  "author": "case2912",
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.4.11",
+    "babel-cli": "^6.11.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-3": "^6.11.0",
+    "koa": "^2.0.0-alpha.4",
+    "koa-bodyparser": "^3.1.0",
+    "koa-router": "^7.0.1",
+    "lodash": "^4.14.1",
+    "vogels": "^2.2.0"
+  }
 }
