--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-3": "^6.11.0",
+    "cron": "^1.1.0",
     "koa": "^2.0.0-alpha.4",
     "koa-bodyparser": "^3.1.0",
     "koa-router": "^7.0.1",
